--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
               {{date format="YYYY"}} &bull; All rights reserved.
       </section>
-      <section class="poweredby">Made with Jekyll using 
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
+      <section class="poweredby">Powered by Jekyll and
+        <a href="http://github.com/rosario/kasper">Kasper.</a>
       </section>
     </footer>
     
