--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p> 
-                        Here goes the author description. You might want to place some links too in here
+                        Brennan Brown is an eighteen year-old aspiring web & software developer. When he isn't coding silly things he's learning French and giving eskimo kisses to his girlfriend.
                     </p>
                 </section>                
             {% endif %}
