Added .post-title attributes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,10 @@
 	display:inline;
 }
 
+.post-title
+	text-align:center;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax"
