--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,10 @@
 	text-align:center;
 }
 
+h1 {
+	text-align:center;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax"
