--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ post_class: post-template
 
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
-            <p>Read this in about {{ page.content | reading_time }}</p>
+            <p>Read this in about {{ reading_time }}</p>
             <section class="post-meta">                
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                 {% if page.categories.size > 0 %} 
