--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,11 +8,11 @@
 	display:inline;
 }
 
-.post-title h1 {
+h1.post-title {
 	text-align:center;
 }
 
-.read p{
+p.read {
 	text-align:center;
 	color:#696969;
 }
