--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ post_class: post-template
 
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
-            <p class="read">Read this in about {{ content.size | readtime }}</p>
+            <p class="read">{{ page.content | number_of_words | append: '.0' | divided_by:180 | append: 'min' }} Min. Read</p>
             <section class="post-meta">                
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                 {% if page.categories.size > 0 %} 
