--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Raleway:700,400" />
     <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
 
@@ -25,7 +25,7 @@
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
               {{date format="YYYY"}} &bull; All rights reserved.
       </section>
-      <section class="poweredby">Powered by Jekyll and
+      <section class="poweredby">Jekyll and
         <a href="http://github.com/rosario/kasper">Kasper.</a>
       </section>
     </footer>
