--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,11 @@ archive: false
 post_class: post-template
 ---
 
-<head>
-    <title>{{ page.title }} - {{ site.name }}</title>
-    <meta name="description" content="{{ site.meta_description}}" />
+<header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
+    <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
+        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
+        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}rss.xml">Subscribe</a>
+    </nav>
 </header>
 
 <main class="content" role="main">
