Testing navigation bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,12 +41,16 @@
 
 </head>
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
-
+    <ul class="nav nav-tabs">
+  {% assign pages_list = site.weighted_pages %}
+  {% assign group = 'navigation' %}
+  {% include pages_list %}
+    </ul>
     {{ content }}
     <footer class="site-footer clearfix">
       <section class="copyright">
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
-              {{date format="YYYY"}} &bull; All rights reserved.
+              2015 &bull; All rights reserved.
       </section>
       <section class="poweredby">Jekyll and
         <a href="http://github.com/rosario/kasper">Kasper.</a>
