--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -673,7 +673,7 @@ margin on the iframe, cause it breaks stuff. */
     margin: 0;
     font-size: 2rem;
     line-height: 1.5em;
-    font-weight: 300;
+    font-weight: 400;
     font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
@@ -1601,6 +1601,10 @@ body:not(.post-template) .post-title {
         font-size: 1.6rem;
     }
 
+    .page-description-2 {
+        font-size: 1.6rem;
+    }
+
     h1, h2, h3,
     h4, h5, h6 {
         margin: 0 0 0.3em 0;
@@ -1727,7 +1731,7 @@ body:not(.post-template) .post-title {
         font-size: 1.4rem;
     }
 
-    .archive-template .main-header .page-description {
+    .archive-template .main-header .page-description .page-description-2 {
         display: none;
     }
 
