--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -674,16 +674,6 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 2rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
-    letter-spacing: 0.01rem;
-    color: rgba(255,255,255,0.8);
-}
-
-.page-description-2 {
-    margin: 0;
-    font-size: 2rem;
-    line-height: 1.5em;
-    font-weight: 400;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
@@ -722,12 +712,6 @@ margin on the iframe, cause it breaks stuff. */
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s;
 }
-
-.home-template .page-description-2 {
-    -webkit-animation: fade-in-down 0.9s;
-    animation: fade-in-down 0.9s;
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s;
 
 /* Every post, on every page, gets this style on its <article> tag */
 .post {
@@ -1388,11 +1372,6 @@ body:not(.post-template) .post-title {
         line-height: 1.5em;
     }
 
-    .page-description-2 {
-        font-size: 1.8rem;
-        line-height: 1.5em;
-    }
-
     .post {
         font-size: 0.95em
     }
@@ -1601,10 +1580,6 @@ body:not(.post-template) .post-title {
         font-size: 1.6rem;
     }
 
-    .page-description-2 {
-        font-size: 1.6rem;
-    }
-
     h1, h2, h3,
     h4, h5, h6 {
         margin: 0 0 0.3em 0;
@@ -1731,7 +1706,7 @@ body:not(.post-template) .post-title {
         font-size: 1.4rem;
     }
 
-    .archive-template .main-header .page-description .page-description-2 {
+    .archive-template .main-header .page-description {
         display: none;
     }
 
