Added additional ads

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,16 +50,18 @@
       <section class="poweredby">Jekyll and
         <a href="http://github.com/rosario/kasper">Kasper.</a>
       </section>
-        <script type="text/javascript">
-          google_ad_client = "ca-pub-3055500016021139";
-          google_ad_slot = "4558210400";
-          google_ad_width = 728;
-          google_ad_height = 90;
+        <div-align="center">
+          <script type="text/javascript">
+            google_ad_client = "ca-pub-3055500016021139";
+            google_ad_slot = "4558210400";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            </script>
+            <!-- Support my Website! -->
+            <script type="text/javascript"
+            src="//pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
-          <!-- Support my Website! -->
-          <script type="text/javascript"
-          src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-        </script>
+        </div>
     </footer>
     
     <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
