Changed posts, made website more professional.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,7 +85,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p> 
-                        Brennan Brown is an eighteen year-old aspiring web & software developer. When he isn't coding silly things he's learning French and giving eskimo kisses to his girlfriend.
+                        Brennan Brown is an eighteen year-old aspiring information designer and developer. When he isn't coding silly things, he's making video game soundtracks or experimenting with film photography.
                     </p>
                 </section>                
             {% endif %}
